# danws_cpp

./: .gitignore  CMakeLists.txt  README.md
include/danws/: danws.h
include/danws/api/: client.h  flat_state.h  principal_tx.h  server.h  server_transport.h  session.h  topic_client_handle.h  topic_handle.h
include/danws/connection/: bulk_queue.h  heartbeat_manager.h  reconnect_engine.h
include/danws/protocol/: codec.h  error.h  serializer.h  stream_parser.h  types.h
include/danws/state/: key_registry.h
src/api/: client.cpp  flat_state.cpp  principal_tx.cpp  server.cpp  session.cpp  topic_client_handle.cpp  topic_handle.cpp
src/connection/: heartbeat_manager.cpp  reconnect_engine.cpp
src/protocol/: codec.cpp  serializer.cpp  stream_parser.cpp
src/state/: key_registry.cpp
tests/: test_codec.cpp  test_key_registry.cpp  test_server.cpp  test_stream_parser.cpp
